# MLCOE_Q2_PF

./: .gitignore  README.md  pyproject.toml  requirements.txt  results_traceability.md
.github/workflows/: ci.yml
configs/: ssm_linear.yaml  ssm_range_bearing_moderate.yaml  ssm_range_bearing_strong.yaml
docs/: RANGE_BEARING_FILTERS.md
examples/: range_bearing_example.py
reports/: Experiment_Formulas.tex  Report_II_Addendum_Diagnostics.md  multivariate_recovery_story.md
reports/1_LinearGaussianSSM/: kalman_filter_codebase_explanation.tex
reports/8_BonusQ3_SSL_Comparison/: results_circle.txt  results_line.txt  results_sine.txt  results_swiss_roll.txt
reports/d1_lhnn_nnot_moderate_T100/: nnot_vs_sinkhorn_posteriors.txt  svssm_hmc_multi_full_phi_diagnostics.txt
reports/d1_lhnn_nnot_widephi_T100/: svssm_hmc_multi_full_phi_diagnostics.txt
reports/d1_lhnn_sinkhorn_moderate_T100/: svssm_hmc_multi_full_phi_diagnostics.txt
reports/d2_T50_lhnn_nuts/: svssm_hmc_multi_full_phi_diagnostics.txt
scripts/: ab_jit_refactor.py  check_prior_dominance.py  compare_nnot_sinkhorn_posteriors.py  compare_prior_vs_posterior.py  convert_full_phi_npz_for_aggregate.py  plot_corner_comparison.py  plot_prior_vs_posterior_overlay.py  plot_trace_multi_full_phi.py  plot_trace_stationary_cov.py  profile_hmc_step_xla.py  profile_section1.py  profile_section1_svssm.py  profile_section1_svssm_multi.py  run_bonus.sh  run_hmc_ledh_isolated.sh  run_lhnn_isolated.sh  run_part1.sh  run_part2.sh  run_pmmh_isolated.sh  run_svssm_hmc_parallel.sh  run_tests.sh  sanity_test_svssm_ledh.py  sanity_test_svssm_neural_ot.py  save_diagnostics_multi_full_phi.py  stitch_multi_full_phi_chains.py  sweep_sinkhorn_vs_ledh_flow.py  test_exp_integrator.py  test_expm_2x2.py  test_expm_pade.py  test_filter_seedmatch.py  test_filter_xla_sanity.py  validate_svssm_ledh.py  verify_no_retracing.py  verify_no_retracing_in_hmc.py  verify_no_retracing_ledh.py  verify_no_retracing_svssm.py
scripts/exp/: ablate_init_h0.py  (+55 more)
tests/: README.md  __init__.py  test_accuracy_advanced.py  test_advanced_filters.py  test_bonus_hmc_pmmh.py  test_bonus_hmc_tfp.py  test_bonus_lhnn_hmc.py  test_bonus_neural_ot.py  test_bonus_ssl_inference.py  test_data_generators.py  test_differentiable_ledh_neural_ot.py  test_differentiable_ledh_svssm.py  test_differentiable_pfpf_ledh.py  test_dpf_filters.py  test_dpf_sinkhorn.py  test_dpf_training.py  test_edh_components.py  test_experiments_new.py  test_experiments_range_bearing.py  test_filters.py  test_full_pipeline_integration.py  test_integration.py  test_integration_part2_part3.py  test_lhnn_nuts.py  test_linalg.py  test_mcmc_diagnostics.py  test_metrics.py  test_models.py  test_models_advanced.py  test_models_ssl_kitagawa_daidaum.py  test_particle_filter.py  test_pfpf_components.py  test_resampling.py  test_scripts_analysis_helpers.py  test_spf_pfpf_dai_daum.py  test_svssm_aggregate_integration.py  test_svssm_multivariate_aggregate_integration.py  test_svssm_neural_ot.py  test_svssm_neural_ot_training.py  test_ukf_components.py  (+1 more)
(+408 files in other folders)
